--- a/head.html
+++ b/head.html
@@ -14,58 +14,84 @@
 </head>
 <body>
   <!-- шапка сайта -->
-  <div class="header col-md-6">
-    <h1> UGU News </h1>
-    <button class="button_enter" type="button" name="button">
-      <a href="#">Войти</a>
-    </button>
+  <div class="header">
+    <h1> OMG News </h1>
+    <div>
+    	<form name="sign_in" method="post">
+    		<input 
+    			type="text" 
+    			name="login" 
+    			placeholder="eneter your login">
+    		<input 
+    			type="password" 
+    			name="password" 
+    			placeholder="enter your password">
+		    <input 
+		    	type="submit"
+		    	name="submit"  
+		    	value="submit">
+	    </form>
+    </div>
   </div>
   <!-- список новостей -->
   <div name="news_descriptions_list" class="col-md-6 news_descriptions_list">
     
-        <div>
-            <a href="">
-                news description 1     
-            </a>
-        </div>
-        <div>
-            <a href="">
-                news description 2
-            </a>
-        </div>
-        <div>
-            <a href="">
-                news description 3
-            </a>
-        </div>
-        <div>
-            <a href="">
-                news description 4
-            </a>
-        </div>
-        <div class="num_page">
-            <button>
-                <a href=""> < </a>
-            </button>
-            <button>
-                <a href="">1</a>
-            </button>
-            <button>
-                <a href="">2</a>
-            </button>
-            <button>
-                <a href="">3</a>
-            </button>
-            <button>
-                <a href="">4</a>
-            </button>
-            <button>
-                <a href="">5</a>
-            </button>
-            <button>
-                <a href=""> > </a>
-            </button>
-        </div>
+    <div class="news_block">
+      <a href="">
+        <h4 class="news_name">News name 1</h4>
+        <p class="news_date">news date</p>
+        <p class="news_description">news description 1</p>     
+      </a>
+      <form class="edit_button">
+      	<input type="" name="">
+      	<input type="submit" name="edut" value="edit">
+      </form>
+    </div>
+    <div class="news_block">
+      <a href="">
+        <h4 class="news_name">News name 2</h4>
+        <p class="news_date">news date</p>
+        <p class="news_description">news description 2</p>     
+      </a>
+    </div>
+    <div class="news_block">
+      <a href="">
+        <h4 class="news_name">News name 3</h4>
+        <p class="news_date">news date</p>
+        <p class="news_description">news description 3</p>     
+      </a>
+    </div>
+    <div class="news_block">
+      <a href="">
+        <h4 class="news_name">News name 4</h4>
+        <p class="news_date">news date</p>
+        <p class="news_description">news description 4</p>     
+      </a>
+    </div>
+    
+    <div class="num_page">
+        <button>
+            <a href=""> < </a>
+        </button>
+        <button>
+            <a href="">1</a>
+        </button>
+        <button>
+            <a href="">2</a>
+        </button>
+        <button>
+            <a href="">3</a>
+        </button>
+        <button>
+            <a href="">4</a>
+        </button>
+        <button>
+            <a href="">5</a>
+        </button>
+        <button>
+            <a href=""> > </a>
+        </button>
+    </div>
   </div>
   <!-- подвал -->
 
