--- a/head.html
+++ b/head.html
@@ -24,6 +24,9 @@
     <div class="login_form">
 	  <!-- сюда имя юзера вместо гостя-->
       <h4>Hello Guest!</h4>
+      	<form>
+      		<input type="submit" name="form" value="add_news">
+      	</form>
     	<form name="sign_in" method="post">
     		<input 
     			type="text" 
